Changed lm to glm

--- a/Wilmar.html
+++ b/Wilmar.html
@@ -381,97 +381,157 @@ entrenamiento. Los accidentes del año 2019 y 2020 se usaran para validar
 los modelos.</p>
 <p>El criterio de éxito de los modelos predictivos será el MAE de la
 predicción.</p>
-<div id="modelo-lineal-1" class="section level3">
-<h3>Modelo lineal 1</h3>
+</div>
+<div id="modelo-lineal-1" class="section level2">
+<h2>Modelo lineal 1</h2>
 <p>Para este primer modelo, consideraremos unicamente las variables
 FESTIVIDAD Y DIA_SEMANA para predecir la accidentalidad.</p>
+<div id="predicción-y-evaluación-para-los-datos-de-entrenamiento" class="section level3">
+<h3>Predicción y Evaluación para los datos de Entrenamiento</h3>
+<pre><code>## [1] &quot;MSE: 367.628502, MAE: 14.509135, R2: 0.485746&quot;</code></pre>
 </div>
-<div id="evaluación-datos-entrenamiento" class="section level3">
-<h3>Evaluación datos entrenamiento</h3>
-<pre><code>## [1] &quot;MSE: 374.314860, MAE: 14.624239, R2: 0.476393&quot;</code></pre>
-</div>
-<div id="evaluacion-datos-de-validacion" class="section level3">
-<h3>Evaluacion datos de validacion</h3>
-<pre><code>## [1] &quot;MSE: 1558.228243, MAE: 29.522167, R2: 0.017636&quot;</code></pre>
+<div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2019" class="section level3">
+<h3>Predicción y Evaluación para los datos de Validación en el año
+2019</h3>
+<pre><code>## [1] &quot;MSE: 497.005479, MAE: 17.438356, R2: 0.433695&quot;</code></pre>
 </div>
 <div id="variacion-entre-train-y-val" class="section level3">
 <h3>Variacion entre train y val</h3>
-<pre><code>## [1] 101.8715</code></pre>
+<pre><code>## [1] 20.1888</code></pre>
+</div>
+<div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2020" class="section level3">
+<h3>Predicción y Evaluación para los datos de Validación en el año
+2020</h3>
+<pre><code>## [1] &quot;MSE: 3139.151639, MAE: 47.422131, R2: -1.172789&quot;</code></pre>
+</div>
+<div id="variacion-entre-train-y-val-1" class="section level3">
+<h3>Variacion entre train y val</h3>
+<pre><code>## [1] 226.8433</code></pre>
 </div>
 <div id="modelo-lineal-2-clase" class="section level3">
 <h3>Modelo lineal 2 (clase)</h3>
 </div>
-<div id="prediccin-y-evaluacin-para-los-datos-de-entrenamiento" class="section level3">
-<h3>Predicci?n y Evaluaci?n para los datos de Entrenamiento</h3>
-<pre><code>## [1] &quot;MSE: 90.944785, MAE: 6.145276, R2: 0.896109&quot;</code></pre>
+<div id="predicción-y-evaluación-para-los-datos-de-entrenamiento-1" class="section level3">
+<h3>Predicción y Evaluación para los datos de Entrenamiento</h3>
+<pre><code>## [1] &quot;MSE: 58.326135, MAE: 4.747485, R2: 0.933371&quot;</code></pre>
 </div>
-<div id="prediccin-y-evaluacin-para-los-datos-de-validacin" class="section level3">
-<h3>Predicci?n y Evaluaci?n para los datos de Validaci?n</h3>
-<pre><code>## [1] &quot;MSE: 208.186170, MAE: 8.279920, R2: 0.709119&quot;</code></pre>
+<div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2019-1" class="section level3">
+<h3>Predicción y Evaluación para los datos de Validación en el año
+2019</h3>
+<pre><code>## [1] &quot;MSE: 65.829308, MAE: 5.048847, R2: 0.926052&quot;</code></pre>
 </div>
-<div id="variacion-entre-train-y-val-1" class="section level3">
+<div id="variacion-entre-train-y-val-2" class="section level3">
 <h3>Variacion entre train y val</h3>
-<pre><code>## [1] 34.73634</code></pre>
+<pre><code>## [1] 6.347841</code></pre>
+</div>
+<div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2020-1" class="section level3">
+<h3>Predicción y Evaluación para los datos de Validación en el año
+2020</h3>
+<pre><code>## [1] &quot;MSE: 356.077572, MAE: 10.497470, R2: 0.116423&quot;</code></pre>
+</div>
+<div id="variacion-entre-train-y-val-3" class="section level3">
+<h3>Variacion entre train y val</h3>
+<pre><code>## [1] 121.1165</code></pre>
 </div>
 <div id="modelo-lineal-3-diseno" class="section level3">
 <h3>Modelo lineal 3 (diseno)</h3>
 </div>
-<div id="prediccin-y-evaluacin-para-los-datos-de-entrenamiento-1" class="section level3">
-<h3>Predicci?n y Evaluaci?n para los datos de Entrenamiento</h3>
-<pre><code>## [1] &quot;MSE: 111.682724, MAE: 6.388594, R2: 0.889266&quot;</code></pre>
+<div id="predicción-y-evaluación-para-los-datos-de-entrenamiento-2" class="section level3">
+<h3>Predicción y Evaluación para los datos de Entrenamiento</h3>
+<pre><code>## [1] &quot;MSE: 87.901661, MAE: 5.187375, R2: 0.912845&quot;</code></pre>
 </div>
-<div id="prediccin-y-evaluacin-para-los-datos-de-validacin-1" class="section level3">
-<h3>Predicci?n y Evaluaci?n para los datos de Validaci?n</h3>
-<pre><code>## [1] &quot;MSE: 243.717134, MAE: 8.730218, R2: 0.580455&quot;</code></pre>
+<div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2019-2" class="section level3">
+<h3>Predicción y Evaluación para los datos de Validación en el año
+2019</h3>
+<pre><code>## [1] &quot;MSE: 97.620890, MAE: 5.706963, R2: 0.857395&quot;</code></pre>
 </div>
-<div id="variacion-entre-train-y-val-2" class="section level3">
+<div id="variacion-entre-train-y-val-4" class="section level3">
 <h3>Variacion entre train y val</h3>
-<pre><code>## [1] 36.65321</code></pre>
+<pre><code>## [1] 10.01639</code></pre>
+</div>
+<div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2020-2" class="section level3">
+<h3>Predicción y Evaluación para los datos de Validación en el año
+2020</h3>
+<pre><code>## [1] &quot;MSE: 464.239930, MAE: 11.781086, R2: -0.236520&quot;</code></pre>
+</div>
+<div id="variacion-entre-train-y-val-5" class="section level3">
+<h3>Variacion entre train y val</h3>
+<pre><code>## [1] 127.1107</code></pre>
 </div>
 </div>
 <div id="modelo-4-gravedad" class="section level2">
 <h2>Modelo 4 (gravedad)</h2>
-<div id="prediccin-y-evaluacin-para-los-datos-de-entrenamiento-2" class="section level3">
-<h3>Predicci?n y Evaluaci?n para los datos de Entrenamiento</h3>
-<pre><code>## [1] &quot;MSE: 131.129310, MAE: 8.877789, R2: 0.799093&quot;</code></pre>
+<div id="predicción-y-evaluación-para-los-datos-de-entrenamiento-3" class="section level3">
+<h3>Predicción y Evaluación para los datos de Entrenamiento</h3>
+<pre><code>## [1] &quot;MSE: 120.963489, MAE: 7.929513, R2: 0.814668&quot;</code></pre>
 </div>
-<div id="prediccin-y-evaluacin-para-los-datos-de-validacin-2" class="section level3">
-<h3>Predicci?n y Evaluaci?n para los datos de Validaci?n</h3>
-<pre><code>## [1] &quot;MSE: 378.352941, MAE: 14.762630, R2: 0.461216&quot;</code></pre>
+<div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2019-3" class="section level3">
+<h3>Predicción y Evaluación para los datos de Validación en el año
+2019</h3>
+<pre><code>## [1] &quot;MSE: 154.880226, MAE: 9.122034, R2: 0.781845&quot;</code></pre>
 </div>
-<div id="variacion-entre-train-y-val-3" class="section level3">
+<div id="variacion-entre-train-y-val-6" class="section level3">
 <h3>Variacion entre train y val</h3>
-<pre><code>## [1] 66.28723</code></pre>
+<pre><code>## [1] 15.03902</code></pre>
+</div>
+<div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2020-3" class="section level3">
+<h3>Predicción y Evaluación para los datos de Validación en el año
+2020</h3>
+<pre><code>## [1] &quot;MSE: 708.092857, MAE: 21.282143, R2: -0.369461&quot;</code></pre>
+</div>
+<div id="variacion-entre-train-y-val-7" class="section level3">
+<h3>Variacion entre train y val</h3>
+<pre><code>## [1] 168.3915</code></pre>
 </div>
 </div>
 <div id="modelo-5-comuna" class="section level2">
 <h2>Modelo 5 (comuna)</h2>
-<div id="prediccin-y-evaluacin-para-los-datos-de-entrenamiento-3" class="section level3">
-<h3>Predicci?n y Evaluaci?n para los datos de Entrenamiento</h3>
-<pre><code>## [1] &quot;MSE: 11.730851, MAE: 2.367739, R2: 0.726024&quot;</code></pre>
+<div id="predicción-y-evaluación-para-los-datos-de-entrenamiento-4" class="section level3">
+<h3>Predicción y Evaluación para los datos de Entrenamiento</h3>
+<pre><code>## [1] &quot;MSE: 9.769576, MAE: 2.141301, R2: 0.771830&quot;</code></pre>
 </div>
-<div id="prediccin-y-evaluacin-para-los-datos-de-validacin-3" class="section level3">
-<h3>Predicci?n y Evaluaci?n para los datos de Validaci?n</h3>
-<pre><code>## [1] &quot;MSE: 17.121631, MAE: 2.804774, R2: 0.545206&quot;</code></pre>
+<div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2019-4" class="section level3">
+<h3>Predicción y Evaluación para los datos de Validación en el año
+2019</h3>
+<pre><code>## [1] &quot;MSE: 10.576090, MAE: 2.206781, R2: 0.765036&quot;</code></pre>
 </div>
-<div id="variacion-entre-train-y-val-4" class="section level3">
+<div id="variacion-entre-train-y-val-8" class="section level3">
 <h3>Variacion entre train y val</h3>
-<pre><code>## [1] 18.45788</code></pre>
+<pre><code>## [1] 3.057955</code></pre>
+</div>
+<div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2020-4" class="section level3">
+<h3>Predicción y Evaluación para los datos de Validación en el año
+2020</h3>
+<pre><code>## [1] &quot;MSE: 23.711105, MAE: 3.286509, R2: -0.051873&quot;</code></pre>
+</div>
+<div id="variacion-entre-train-y-val-9" class="section level3">
+<h3>Variacion entre train y val</h3>
+<pre><code>## [1] 53.48188</code></pre>
 </div>
 </div>
 <div id="modelo-6-comuna-clase" class="section level2">
 <h2>Modelo 6 (comuna, clase)</h2>
-<div id="prediccin-y-evaluacin-para-los-datos-de-entrenamiento-4" class="section level3">
-<h3>Predicci?n y Evaluaci?n para los datos de Entrenamiento</h3>
-<pre><code>## [1] &quot;MSE: 7.921472, MAE: 1.890176, R2: 0.435636&quot;</code></pre>
+<div id="predicción-y-evaluación-para-los-datos-de-entrenamiento-5" class="section level3">
+<h3>Predicción y Evaluación para los datos de Entrenamiento</h3>
+<pre><code>## [1] &quot;MSE: 4.047626, MAE: 1.168944, R2: 0.711627&quot;</code></pre>
 </div>
-<div id="prediccin-y-evaluacin-para-los-datos-de-validacin-4" class="section level3">
-<h3>Predicci?n y Evaluaci?n para los datos de Validaci?n</h3>
-<pre><code>## [1] &quot;MSE: 7.562616, MAE: 1.900917, R2: 0.362616&quot;</code></pre>
+<div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2019-5" class="section level3">
+<h3>Predicción y Evaluación para los datos de Validación en el año
+2019</h3>
+<pre><code>## [1] &quot;MSE: 4.127869, MAE: 1.160140, R2: 0.711580&quot;</code></pre>
 </div>
-<div id="variacion-entre-train-y-val-5" class="section level3">
+<div id="variacion-entre-train-y-val-10" class="section level3">
 <h3>Variacion entre train y val</h3>
-<pre><code>## [1] 0.5682618</code></pre>
+<pre><code>## [1] -0.7530888</code></pre>
+</div>
+<div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2020-5" class="section level3">
+<h3>Predicción y Evaluación para los datos de Validación en el año
+2020</h3>
+<pre><code>## [1] &quot;MSE: 5.091152, MAE: 1.360412, R2: 0.270880&quot;</code></pre>
+</div>
+<div id="variacion-entre-train-y-val-11" class="section level3">
+<h3>Variacion entre train y val</h3>
+<pre><code>## [1] 16.3796</code></pre>
 </div>
 </div>
 
