--- a/Wilmar.html
+++ b/Wilmar.html
@@ -382,81 +382,144 @@ los modelos.</p>
 <p>El criterio de éxito de los modelos predictivos será el MAE de la
 predicción.</p>
 </div>
-<div id="modelo-lineal-1" class="section level2">
-<h2>Modelo lineal 1</h2>
-<p>Para este primer modelo, consideraremos unicamente las variables
-FESTIVIDAD Y DIA_SEMANA para predecir la accidentalidad.</p>
+<div id="modelo-1-modelo-lineal-generalizado-inicial" class="section level2">
+<h2>Modelo 1: modelo lineal generalizado inicial</h2>
+<p>Como nos interesa predecir el número de accidentes por unidad de
+tiempo, resulta conveniente utilizar un modelo lineal generalizado con
+la distribución Poisson. Para este primer modelo, consideraremos
+unicamente las variables FESTIVIDAD Y DIA_SEMANA para predecir la
+accidentalidad.</p>
 <div id="predicción-y-evaluación-para-los-datos-de-entrenamiento" class="section level3">
 <h3>Predicción y Evaluación para los datos de Entrenamiento</h3>
 <pre><code>## [1] &quot;MSE: 367.628502, MAE: 14.509135, R2: 0.485746&quot;</code></pre>
+<p>Para los datos de entrenamiento, se obtiene un MAE de 14.5091352, y
+un R2 de 0.4857459.</p>
 </div>
 <div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2019" class="section level3">
 <h3>Predicción y Evaluación para los datos de Validación en el año
 2019</h3>
 <pre><code>## [1] &quot;MSE: 497.005479, MAE: 17.438356, R2: 0.433695&quot;</code></pre>
+<p>Para los datos de validación del año 2019, se obtiene un MAE de
+17.4383562, y un R2 de 0.4336946.</p>
 </div>
-<div id="variacion-entre-train-y-val" class="section level3">
-<h3>Variacion entre train y val</h3>
+<div id="variacion-entre-train-y-val-2019" class="section level3">
+<h3>Variacion entre train y val (2019)</h3>
 <pre><code>## [1] 20.1888</code></pre>
+<p>La variación entre el MAE de entrenamiento y validación es de 20.1888
+%, lo cual indica un posible sobreentrenamiento. Además, el R2 es
+relativamente bajo, cercano al 50%. Veamos que pasa para el año
+2020.</p>
 </div>
 <div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2020" class="section level3">
 <h3>Predicción y Evaluación para los datos de Validación en el año
 2020</h3>
 <pre><code>## [1] &quot;MSE: 3139.151639, MAE: 47.422131, R2: -1.172789&quot;</code></pre>
+<p>Para los datos de validación del año 2020, se obtiene un MAE de
+47.4221311, y un R2 de -1.1727893. Este MAE tan alto y este R2 negativo
+indican que el modelo se ajusta muy pobremente a los datos del año
+2020.</p>
+<p>Sin embargo, tal como veremos a continuación, ningún modelo se ajusta
+bien al año 2020. Esto se puede explicar por dos posibles razones:</p>
+<ol style="list-style-type: decimal">
+<li>En 2020 fue el inicio de la pandemia, y hubo muchos menos
+accidentes.</li>
+<li>En 2020 solo hay observaciones hasta el mes de agosto.</li>
+</ol>
+<p>Por tanto, el año 2020 no nos será muy útil para validar los modelos,
+ya que el comportamiento de este año es muy diferente a los demás años
+con los que se entrenó el modelo.</p>
 </div>
-<div id="variacion-entre-train-y-val-1" class="section level3">
-<h3>Variacion entre train y val</h3>
+<div id="variacion-entre-train-y-val-2020" class="section level3">
+<h3>Variacion entre train y val (2020)</h3>
 <pre><code>## [1] 226.8433</code></pre>
+<p>La variación entre el MAE de entrenamiento y validación es de
+226.8433 %.</p>
 </div>
-<div id="modelo-lineal-2-clase" class="section level3">
-<h3>Modelo lineal 2 (clase)</h3>
+<div id="modelo-2-modelo-lineal-generalizado-usando-la-variable-clase" class="section level3">
+<h3>Modelo 2: modelo lineal generalizado, usando la variable clase</h3>
+<p>En el segundo modelo, utilizaremos las mismas variables del modelo
+inicial, y sumaremos la variable clase. Veamos su desempeño.</p>
 </div>
 <div id="predicción-y-evaluación-para-los-datos-de-entrenamiento-1" class="section level3">
 <h3>Predicción y Evaluación para los datos de Entrenamiento</h3>
 <pre><code>## [1] &quot;MSE: 58.326135, MAE: 4.747485, R2: 0.933371&quot;</code></pre>
+<p>Para los datos de entrenamiento, se obtiene un MAE de 4.7474847, y un
+R2 de 0.9333708.</p>
 </div>
 <div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2019-1" class="section level3">
 <h3>Predicción y Evaluación para los datos de Validación en el año
 2019</h3>
 <pre><code>## [1] &quot;MSE: 65.829308, MAE: 5.048847, R2: 0.926052&quot;</code></pre>
+<p>Para los datos de validación del año 2019, se obtiene un MAE de
+5.0488474, y un R2 de 0.926052. Estos valores son mucho mejores que los
+obtenidos con el modelo anterior.</p>
 </div>
-<div id="variacion-entre-train-y-val-2" class="section level3">
-<h3>Variacion entre train y val</h3>
+<div id="variacion-entre-train-y-val-2019-1" class="section level3">
+<h3>Variacion entre train y val (2019)</h3>
 <pre><code>## [1] 6.347841</code></pre>
+<p>La variación entre el MAE de entrenamiento y validación es de
+6.347841 %; según estta cifra, no hay indicios de sobreentrenamiento. El
+R2 fue muy bueno tanto en entrenamiento como en validacion, superior al
+90%. Este modelo es un muy buen candidato para ser utilizado en las
+predicciones futuras.</p>
 </div>
 <div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2020-1" class="section level3">
 <h3>Predicción y Evaluación para los datos de Validación en el año
 2020</h3>
 <pre><code>## [1] &quot;MSE: 356.077572, MAE: 10.497470, R2: 0.116423&quot;</code></pre>
+<p>Para los datos de validación del año 2020, se obtiene un MAE de
+10.4974705, y un R2 de 0.1164231. El modelo se ajusta ligeramente mejor
+a los datos de 2020 respecto al caso anterior, pero sigue siendo muy
+inadecuado para predecir la accidentalidad de este año. Tal como se
+explicó anteriormente, no es adecuado validar el modelo con estos
+datos.</p>
 </div>
-<div id="variacion-entre-train-y-val-3" class="section level3">
-<h3>Variacion entre train y val</h3>
+<div id="variacion-entre-train-y-val-2020-1" class="section level3">
+<h3>Variacion entre train y val (2020)</h3>
 <pre><code>## [1] 121.1165</code></pre>
+<p>La variación entre el MAE de entrenamiento y validación es de
+121.1165 %.</p>
 </div>
-<div id="modelo-lineal-3-diseno" class="section level3">
-<h3>Modelo lineal 3 (diseno)</h3>
+<div id="modelo-3-modelo-lineal-generalizado-usando-la-variable-diseño" class="section level3">
+<h3>Modelo 3: modelo lineal generalizado, usando la variable diseño</h3>
+<p>El modelo 2 tuvo un muy buen desempeño. Aun así, sería interesante
+probar modelos utilizando otras variables. Para este caso usaremos las
+variables Festividad, Día Semana y Diseño.</p>
 </div>
 <div id="predicción-y-evaluación-para-los-datos-de-entrenamiento-2" class="section level3">
 <h3>Predicción y Evaluación para los datos de Entrenamiento</h3>
 <pre><code>## [1] &quot;MSE: 87.901661, MAE: 5.187375, R2: 0.912845&quot;</code></pre>
+<p>Para los datos de entrenamiento, se obtiene un MAE de 5.1873754, y un
+R2 de 0.9128454.</p>
 </div>
 <div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2019-2" class="section level3">
 <h3>Predicción y Evaluación para los datos de Validación en el año
 2019</h3>
 <pre><code>## [1] &quot;MSE: 97.620890, MAE: 5.706963, R2: 0.857395&quot;</code></pre>
+<p>Para los datos de validación del año 2019, se obtiene un MAE de
+5.7069632, y un R2 de 0.8573946.</p>
 </div>
-<div id="variacion-entre-train-y-val-4" class="section level3">
-<h3>Variacion entre train y val</h3>
+<div id="variacion-entre-train-y-val-2019-2" class="section level3">
+<h3>Variacion entre train y val (2019)</h3>
 <pre><code>## [1] 10.01639</code></pre>
+<p>La variación entre el MAE de entrenamiento y validación fue de
+10.01639 %; según estta cifra, no hay indicios de sobreentrenamiento. El
+R2 fue bastante bueno tanto en entrenamiento como en validacion, cercano
+al 90%, pero inferior al del modelo 2. Además, el MAE tambien fue
+superior que el del modelo 2. Por tanto, descartamos este modelo.</p>
 </div>
 <div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2020-2" class="section level3">
 <h3>Predicción y Evaluación para los datos de Validación en el año
 2020</h3>
 <pre><code>## [1] &quot;MSE: 464.239930, MAE: 11.781086, R2: -0.236520&quot;</code></pre>
+<p>Para los datos de validación del año 2020, se obtiene un MAE de
+11.7810858, y un R2 de -0.2365198.</p>
 </div>
-<div id="variacion-entre-train-y-val-5" class="section level3">
-<h3>Variacion entre train y val</h3>
+<div id="variacion-entre-train-y-val-2020-2" class="section level3">
+<h3>Variacion entre train y val (2020)</h3>
 <pre><code>## [1] 127.1107</code></pre>
+<p>La variación entre el MAE de entrenamiento y validación es de
+127.1107 %.</p>
 </div>
 </div>
 <div id="modelo-4-gravedad" class="section level2">
@@ -470,7 +533,7 @@ FESTIVIDAD Y DIA_SEMANA para predecir la accidentalidad.</p>
 2019</h3>
 <pre><code>## [1] &quot;MSE: 154.880226, MAE: 9.122034, R2: 0.781845&quot;</code></pre>
 </div>
-<div id="variacion-entre-train-y-val-6" class="section level3">
+<div id="variacion-entre-train-y-val" class="section level3">
 <h3>Variacion entre train y val</h3>
 <pre><code>## [1] 15.03902</code></pre>
 </div>
@@ -479,7 +542,7 @@ FESTIVIDAD Y DIA_SEMANA para predecir la accidentalidad.</p>
 2020</h3>
 <pre><code>## [1] &quot;MSE: 708.092857, MAE: 21.282143, R2: -0.369461&quot;</code></pre>
 </div>
-<div id="variacion-entre-train-y-val-7" class="section level3">
+<div id="variacion-entre-train-y-val-1" class="section level3">
 <h3>Variacion entre train y val</h3>
 <pre><code>## [1] 168.3915</code></pre>
 </div>
@@ -495,7 +558,7 @@ FESTIVIDAD Y DIA_SEMANA para predecir la accidentalidad.</p>
 2019</h3>
 <pre><code>## [1] &quot;MSE: 10.576090, MAE: 2.206781, R2: 0.765036&quot;</code></pre>
 </div>
-<div id="variacion-entre-train-y-val-8" class="section level3">
+<div id="variacion-entre-train-y-val-2" class="section level3">
 <h3>Variacion entre train y val</h3>
 <pre><code>## [1] 3.057955</code></pre>
 </div>
@@ -504,7 +567,7 @@ FESTIVIDAD Y DIA_SEMANA para predecir la accidentalidad.</p>
 2020</h3>
 <pre><code>## [1] &quot;MSE: 23.711105, MAE: 3.286509, R2: -0.051873&quot;</code></pre>
 </div>
-<div id="variacion-entre-train-y-val-9" class="section level3">
+<div id="variacion-entre-train-y-val-3" class="section level3">
 <h3>Variacion entre train y val</h3>
 <pre><code>## [1] 53.48188</code></pre>
 </div>
@@ -520,7 +583,7 @@ FESTIVIDAD Y DIA_SEMANA para predecir la accidentalidad.</p>
 2019</h3>
 <pre><code>## [1] &quot;MSE: 4.127869, MAE: 1.160140, R2: 0.711580&quot;</code></pre>
 </div>
-<div id="variacion-entre-train-y-val-10" class="section level3">
+<div id="variacion-entre-train-y-val-4" class="section level3">
 <h3>Variacion entre train y val</h3>
 <pre><code>## [1] -0.7530888</code></pre>
 </div>
@@ -529,7 +592,7 @@ FESTIVIDAD Y DIA_SEMANA para predecir la accidentalidad.</p>
 2020</h3>
 <pre><code>## [1] &quot;MSE: 5.091152, MAE: 1.360412, R2: 0.270880&quot;</code></pre>
 </div>
-<div id="variacion-entre-train-y-val-11" class="section level3">
+<div id="variacion-entre-train-y-val-5" class="section level3">
 <h3>Variacion entre train y val</h3>
 <pre><code>## [1] 16.3796</code></pre>
 </div>
