--- a/Wilmar.html
+++ b/Wilmar.html
@@ -402,8 +402,9 @@ un R2 de 0.4857459.</p>
 <p>Para los datos de validación del año 2019, se obtiene un MAE de
 17.4383562, y un R2 de 0.4336946.</p>
 </div>
-<div id="variacion-entre-train-y-val-2019" class="section level3">
-<h3>Variacion entre train y val (2019)</h3>
+<div id="comparación-entre-las-métricas-de-entrenamiento-y-validación-2019" class="section level3">
+<h3>Comparación entre las métricas de entrenamiento y validación
+(2019)</h3>
 <pre><code>## [1] 20.1888</code></pre>
 <p>La variación entre el MAE de entrenamiento y validación es de 20.1888
 %, lo cual indica un posible sobreentrenamiento. Además, el R2 es
@@ -429,17 +430,18 @@ accidentes.</li>
 ya que el comportamiento de este año es muy diferente a los demás años
 con los que se entrenó el modelo.</p>
 </div>
-<div id="variacion-entre-train-y-val-2020" class="section level3">
-<h3>Variacion entre train y val (2020)</h3>
+<div id="comparación-entre-las-métricas-de-entrenamiento-y-validación-2020" class="section level3">
+<h3>Comparación entre las métricas de entrenamiento y validación
+(2020)</h3>
 <pre><code>## [1] 226.8433</code></pre>
 <p>La variación entre el MAE de entrenamiento y validación es de
 226.8433 %.</p>
 </div>
-<div id="modelo-2-modelo-lineal-generalizado-usando-la-variable-clase" class="section level3">
-<h3>Modelo 2: modelo lineal generalizado, usando la variable clase</h3>
+</div>
+<div id="modelo-2-modelo-lineal-generalizado-usando-la-variable-clase" class="section level2">
+<h2>Modelo 2: modelo lineal generalizado, usando la variable clase</h2>
 <p>En el segundo modelo, utilizaremos las mismas variables del modelo
 inicial, y sumaremos la variable clase. Veamos su desempeño.</p>
-</div>
 <div id="predicción-y-evaluación-para-los-datos-de-entrenamiento-1" class="section level3">
 <h3>Predicción y Evaluación para los datos de Entrenamiento</h3>
 <pre><code>## [1] &quot;MSE: 58.326135, MAE: 4.747485, R2: 0.933371&quot;</code></pre>
@@ -454,8 +456,9 @@ R2 de 0.9333708.</p>
 5.0488474, y un R2 de 0.926052. Estos valores son mucho mejores que los
 obtenidos con el modelo anterior.</p>
 </div>
-<div id="variacion-entre-train-y-val-2019-1" class="section level3">
-<h3>Variacion entre train y val (2019)</h3>
+<div id="comparación-entre-las-métricas-de-entrenamiento-y-validación-2019-1" class="section level3">
+<h3>Comparación entre las métricas de entrenamiento y validación
+(2019)</h3>
 <pre><code>## [1] 6.347841</code></pre>
 <p>La variación entre el MAE de entrenamiento y validación es de
 6.347841 %; según estta cifra, no hay indicios de sobreentrenamiento. El
@@ -474,18 +477,19 @@ inadecuado para predecir la accidentalidad de este año. Tal como se
 explicó anteriormente, no es adecuado validar el modelo con estos
 datos.</p>
 </div>
-<div id="variacion-entre-train-y-val-2020-1" class="section level3">
-<h3>Variacion entre train y val (2020)</h3>
+<div id="comparación-entre-las-métricas-de-entrenamiento-y-validación-2020-1" class="section level3">
+<h3>Comparación entre las métricas de entrenamiento y validación
+(2020)</h3>
 <pre><code>## [1] 121.1165</code></pre>
 <p>La variación entre el MAE de entrenamiento y validación es de
 121.1165 %.</p>
 </div>
-<div id="modelo-3-modelo-lineal-generalizado-usando-la-variable-diseño" class="section level3">
-<h3>Modelo 3: modelo lineal generalizado, usando la variable diseño</h3>
+</div>
+<div id="modelo-3-modelo-lineal-generalizado-usando-la-variable-diseño" class="section level2">
+<h2>Modelo 3: modelo lineal generalizado, usando la variable diseño</h2>
 <p>El modelo 2 tuvo un muy buen desempeño. Aun así, sería interesante
 probar modelos utilizando otras variables. Para este caso usaremos las
 variables Festividad, Día Semana y Diseño.</p>
-</div>
 <div id="predicción-y-evaluación-para-los-datos-de-entrenamiento-2" class="section level3">
 <h3>Predicción y Evaluación para los datos de Entrenamiento</h3>
 <pre><code>## [1] &quot;MSE: 87.901661, MAE: 5.187375, R2: 0.912845&quot;</code></pre>
@@ -499,8 +503,9 @@ R2 de 0.9128454.</p>
 <p>Para los datos de validación del año 2019, se obtiene un MAE de
 5.7069632, y un R2 de 0.8573946.</p>
 </div>
-<div id="variacion-entre-train-y-val-2019-2" class="section level3">
-<h3>Variacion entre train y val (2019)</h3>
+<div id="comparación-entre-las-métricas-de-entrenamiento-y-validación-2019-2" class="section level3">
+<h3>Comparación entre las métricas de entrenamiento y validación
+(2019)</h3>
 <pre><code>## [1] 10.01639</code></pre>
 <p>La variación entre el MAE de entrenamiento y validación fue de
 10.01639 %; según estta cifra, no hay indicios de sobreentrenamiento. El
@@ -515,86 +520,102 @@ superior que el del modelo 2. Por tanto, descartamos este modelo.</p>
 <p>Para los datos de validación del año 2020, se obtiene un MAE de
 11.7810858, y un R2 de -0.2365198.</p>
 </div>
-<div id="variacion-entre-train-y-val-2020-2" class="section level3">
-<h3>Variacion entre train y val (2020)</h3>
+<div id="comparación-entre-las-métricas-de-entrenamiento-y-validación-2020-2" class="section level3">
+<h3>Comparación entre las métricas de entrenamiento y validación
+(2020)</h3>
 <pre><code>## [1] 127.1107</code></pre>
 <p>La variación entre el MAE de entrenamiento y validación es de
 127.1107 %.</p>
 </div>
 </div>
-<div id="modelo-4-gravedad" class="section level2">
-<h2>Modelo 4 (gravedad)</h2>
+<div id="modelo-4-modelo-lineal-generalizado-usando-la-variable-comuna" class="section level2">
+<h2>Modelo 4: modelo lineal generalizado, usando la variable comuna</h2>
+<p>Ahora, probaremos un nuevo modelo, tomando las mismas variables del
+modelo inicial, pero añadiendo la variable COMUNA.</p>
 <div id="predicción-y-evaluación-para-los-datos-de-entrenamiento-3" class="section level3">
 <h3>Predicción y Evaluación para los datos de Entrenamiento</h3>
-<pre><code>## [1] &quot;MSE: 120.963489, MAE: 7.929513, R2: 0.814668&quot;</code></pre>
+<pre><code>## [1] &quot;MSE: 9.769576, MAE: 2.141301, R2: 0.771830&quot;</code></pre>
+<p>Para los datos de entrenamiento, se obtiene un MAE de 2.1413013, y un
+R2 de 0.7718301.</p>
 </div>
 <div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2019-3" class="section level3">
 <h3>Predicción y Evaluación para los datos de Validación en el año
 2019</h3>
-<pre><code>## [1] &quot;MSE: 154.880226, MAE: 9.122034, R2: 0.781845&quot;</code></pre>
+<pre><code>## [1] &quot;MSE: 10.576090, MAE: 2.206781, R2: 0.765036&quot;</code></pre>
+<p>Para los datos de validación del año 2019, se obtiene un MAE de
+2.2067813, y un R2 de 0.7650363.</p>
 </div>
-<div id="variacion-entre-train-y-val" class="section level3">
-<h3>Variacion entre train y val</h3>
-<pre><code>## [1] 15.03902</code></pre>
+<div id="comparación-entre-las-métricas-de-entrenamiento-y-validación-2019-3" class="section level3">
+<h3>Comparación entre las métricas de entrenamiento y validación
+(2019)</h3>
+<pre><code>## [1] 3.057955</code></pre>
+<p>La variación entre el MAE de entrenamiento y validación fue de
+3.057955 %; esta es la variación más baja obtenida hasta el momento, y
+nos da una buena señal de que no hay sobreentrenamiento. También, a
+pesar de que los R2 son ligeramente inferiores respecto a los modelos 2
+y 3, pues son cercanos al 80%, el MAE fue mucho mas bajo que en los
+anteriores modelos, y, teniendo en cuenta que el MAE es nuestro criterio
+de exito, podemos decir que este modelo tambien es un buen candidato
+para realizar nuestras predicciones.</p>
 </div>
 <div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2020-3" class="section level3">
 <h3>Predicción y Evaluación para los datos de Validación en el año
 2020</h3>
-<pre><code>## [1] &quot;MSE: 708.092857, MAE: 21.282143, R2: -0.369461&quot;</code></pre>
+<pre><code>## [1] &quot;MSE: 23.711105, MAE: 3.286509, R2: -0.051873&quot;</code></pre>
+<p>Para los datos de validación del año 2020, se obtiene un MAE de
+3.2865094, y un R2 de -0.0518735.</p>
 </div>
-<div id="variacion-entre-train-y-val-1" class="section level3">
-<h3>Variacion entre train y val</h3>
-<pre><code>## [1] 168.3915</code></pre>
+<div id="comparación-entre-las-métricas-de-entrenamiento-y-validación-2020-3" class="section level3">
+<h3>Comparación entre las métricas de entrenamiento y validación
+(2020)</h3>
+<pre><code>## [1] 53.48188</code></pre>
+<p>La variación entre el MAE de entrenamiento y validación es de
+53.48188 %.</p>
 </div>
 </div>
-<div id="modelo-5-comuna" class="section level2">
-<h2>Modelo 5 (comuna)</h2>
+<div id="modelo-5-modelo-lineal-generalizado-usando-las-variables-clase-y-comuna" class="section level2">
+<h2>Modelo 5: modelo lineal generalizado, usando las variables clase y
+comuna</h2>
+<p>Finalmente, probaremos un último modelo, usando aquellas variables
+que tuvieron el mejor MAE en los modelos anteriores, es decir, CLASE y
+COMUNA. Se incluiran tambien las variables del modelo inicial.</p>
 <div id="predicción-y-evaluación-para-los-datos-de-entrenamiento-4" class="section level3">
 <h3>Predicción y Evaluación para los datos de Entrenamiento</h3>
-<pre><code>## [1] &quot;MSE: 9.769576, MAE: 2.141301, R2: 0.771830&quot;</code></pre>
+<pre><code>## [1] &quot;MSE: 4.047626, MAE: 1.168944, R2: 0.711627&quot;</code></pre>
+<p>Para los datos de entrenamiento, se obtiene un MAE de 1.1689436, y un
+R2 de 0.7116275.</p>
 </div>
 <div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2019-4" class="section level3">
 <h3>Predicción y Evaluación para los datos de Validación en el año
 2019</h3>
-<pre><code>## [1] &quot;MSE: 10.576090, MAE: 2.206781, R2: 0.765036&quot;</code></pre>
+<pre><code>## [1] &quot;MSE: 4.127869, MAE: 1.160140, R2: 0.711580&quot;</code></pre>
+<p>Para los datos de validación del año 2019, se obtiene un MAE de
+1.1601404, y un R2 de 0.7115796.</p>
 </div>
-<div id="variacion-entre-train-y-val-2" class="section level3">
-<h3>Variacion entre train y val</h3>
-<pre><code>## [1] 3.057955</code></pre>
+<div id="comparación-entre-las-métricas-de-entrenamiento-y-validación-2019-4" class="section level3">
+<h3>Comparación entre las métricas de entrenamiento y validación
+(2019)</h3>
+<p>La variación entre el MAE de entrenamiento y validación fue mínima,
+de tan solo -0.75 %; este dato nos ayuda a estar muy seguros de que no
+hay sobreentrenamiento. Con este modelo tambien conseguimos el MAE más
+pequeño de todos, cercano a 1, y el R2 cuadrado sigue siendo bueno,
+superior al 70%. Por tanto, concluimos que este es el mejor modelo para
+predecir, según nuestro criterio de éxito.</p>
+<pre><code>## [1] -0.7530888</code></pre>
 </div>
 <div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2020-4" class="section level3">
 <h3>Predicción y Evaluación para los datos de Validación en el año
 2020</h3>
-<pre><code>## [1] &quot;MSE: 23.711105, MAE: 3.286509, R2: -0.051873&quot;</code></pre>
-</div>
-<div id="variacion-entre-train-y-val-3" class="section level3">
-<h3>Variacion entre train y val</h3>
-<pre><code>## [1] 53.48188</code></pre>
-</div>
-</div>
-<div id="modelo-6-comuna-clase" class="section level2">
-<h2>Modelo 6 (comuna, clase)</h2>
-<div id="predicción-y-evaluación-para-los-datos-de-entrenamiento-5" class="section level3">
-<h3>Predicción y Evaluación para los datos de Entrenamiento</h3>
-<pre><code>## [1] &quot;MSE: 4.047626, MAE: 1.168944, R2: 0.711627&quot;</code></pre>
-</div>
-<div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2019-5" class="section level3">
-<h3>Predicción y Evaluación para los datos de Validación en el año
-2019</h3>
-<pre><code>## [1] &quot;MSE: 4.127869, MAE: 1.160140, R2: 0.711580&quot;</code></pre>
-</div>
-<div id="variacion-entre-train-y-val-4" class="section level3">
-<h3>Variacion entre train y val</h3>
-<pre><code>## [1] -0.7530888</code></pre>
-</div>
-<div id="predicción-y-evaluación-para-los-datos-de-validación-en-el-año-2020-5" class="section level3">
-<h3>Predicción y Evaluación para los datos de Validación en el año
-2020</h3>
 <pre><code>## [1] &quot;MSE: 5.091152, MAE: 1.360412, R2: 0.270880&quot;</code></pre>
+<p>Para los datos de validación del año 2020, se obtiene un MAE de
+1.3604119, y un R2 de 0.2708799.</p>
 </div>
-<div id="variacion-entre-train-y-val-5" class="section level3">
-<h3>Variacion entre train y val</h3>
+<div id="comparación-entre-las-métricas-de-entrenamiento-y-validación-2020-4" class="section level3">
+<h3>Comparación entre las métricas de entrenamiento y validación
+(2020)</h3>
 <pre><code>## [1] 16.3796</code></pre>
+<p>La variación entre el MAE de entrenamiento y validación fue de
+16.3796 %.</p>
 </div>
 </div>
 
